<?xml version="1.0"?>
<package format="2">
  <name>my_robot_package</name>
  <version>0.0.1</version>
  <description>Simple ROS 2 publisher/subscriber using classes</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

</package>